0.19
Added a new --integrity-reporter task to detect referential integrity issues between entity types.
Updated the default file names for report tasks.
Added a new --log-progress task to provide progress information to standard out during processing.

0.18
Improved error messages when errors are returned from the api.
Added support for new shorter date format excluding millisecond information.
Updated mysql writing code to support the new 0.5 schema version and fixed bugs in node insertion sql.
Added support for quiet and verbose command line options.
Modified command line arguments to default to using 0.5 tasks.

0.17
Added schema version checking to all MySQL tasks.
Updated xml reading tasks to provide line number information when parse errors occur.
Modified xml writing tasks to include the osmosis version number in the generator attribute.
Updated mysql tasks to support the new tile indexing and fixed precision lat/lon.

0.16
Fixed a major bug in UTF-8 handling when writing xml files.  All files were being written in the default character set.

0.15
Added full 0.5 support.
Updated 0.4 code to the 005 schema.

0.14
Fixed a bug in the area filtering tasks where the original way was being passed to the destination instead of the modified way with only the available segments populated.
Fixed a bug in the way comparison code where changes in the ordering of segments wouldn't be picked up.
Fixed a bug in date parsing where the month was always being parsed a month in advance.
Added the ability to load database login credentials from a properties file.
Modified xml file writing to use 2 space indenting instead of 4.

0.13
Modified the --bounding-polygon task so it can read files containing blank lines.
Added the ability to dump mysql "current" tables.
Modified xml output to only write latitude and longitude to 7 decimal places.

0.12
Added a --read-api task for retrieving data from the central server.